Minor alignment fixes

--- a/assets/sass/molecules/_banner-menu.scss
+++ b/assets/sass/molecules/_banner-menu.scss
@@ -13,7 +13,7 @@
 	display: inline-block;
 	vertical-align: middle;
 	line-height: 1em;
-	padding-top: 0.2em;
+	padding-top: 0.4em;
 
 	&:first-child:before {
 		display: none;
