--- a/assets/sass/organisms/_banner.scss
+++ b/assets/sass/organisms/_banner.scss
@@ -9,7 +9,7 @@ $slogan-base-font-size-unit: 4;
 	background-position: center bottom;
 	background-repeat: no-repeat;
 	background-size: cover;
-	height: 24em;
+	height: 28em;
 	padding: 1em;
 	font-family: $headline-font;
 
@@ -26,7 +26,7 @@ $slogan-base-font-size-unit: 4;
 	}
 
 	@media all and (min-height: $bp-small-2) {
-		height: 28em;
+		height: 32em;
 	}
 
 	@media all and (min-height: $bp-medium) {
