--- a/assets/sass/organisms/_header.scss
+++ b/assets/sass/organisms/_header.scss
@@ -4,19 +4,18 @@
 	left: 0;
 	right: 0;
 	z-index: 50;
-	padding: 1em 0.5em;
+	padding: 1em;
 	box-sizing: border-box;
 	@include transition(all 0.4s ease-in-out);
 	background-color: $header-bg-color;
 }
 
-/*
 .headroom {
-	background-color: $header-bg-color;
-}*/
+	background-color: transparent;
+}
 
 .headroom--not-top {
-	//background-color: $header-bg-color;
+	background-color: $header-bg-color;
 	padding-top: 1em;
 	padding-bottom: 1em;
 }
@@ -49,5 +48,10 @@
 	.site-header {
 		padding-top: 2.4em;
 		padding-bottom: 2.4em;
+	}
+
+	.headroom.headroom--not-top {
+		padding-top: 1em;
+		padding-bottom: 1em;
 	}
 }
