--- a/assets/sass/organisms/_main-content.scss
+++ b/assets/sass/organisms/_main-content.scss
@@ -32,10 +32,6 @@
 	margin-left: auto;
 	padding-right: 1em;
 	padding-left: 1em;
-
-	&:first-child {
-		margin-top: 6em;
-	}
 }
 
 .main__image--centered {
